@@ -1,270 +1,0 @@
-// !$*UTF8*$!
-{
-	archiveVersion = 1;
-	classes = {
-	};
-	objectVersion = 38;
-	objects = {
-		014CEA4F0018CE4811CA2923 = {
-			buildRules = (
-			);
-			buildSettings = {
-				COPY_PHASE_STRIP = NO;
-				OPTIMIZATION_CFLAGS = "-O0";
-			};
-			isa = PBXBuildStyle;
-			name = Development;
-		};
-		014CEA500018CE4811CA2923 = {
-			buildRules = (
-			);
-			buildSettings = {
-				COPY_PHASE_STRIP = YES;
-			};
-			isa = PBXBuildStyle;
-			name = Deployment;
-		};
-//010
-//011
-//012
-//013
-//014
-//030
-//031
-//032
-//033
-//034
-		034768E6FF38A76511DB9C8B = {
-			isa = PBXExecutableFileReference;
-			path = ABQuery;
-			refType = 3;
-		};
-//030
-//031
-//032
-//033
-//034
-//080
-//081
-//082
-//083
-//084
-		08FB7793FE84155DC02AAC07 = {
-			buildStyles = (
-				014CEA4F0018CE4811CA2923,
-				014CEA500018CE4811CA2923,
-			);
-			hasScannedForEncodings = 1;
-			isa = PBXProject;
-			mainGroup = 08FB7794FE84155DC02AAC07;
-			projectDirPath = "";
-			targets = (
-				08FB779FFE84155DC02AAC07,
-			);
-		};
-		08FB7794FE84155DC02AAC07 = {
-			children = (
-				08FB7795FE84155DC02AAC07,
-				C6859EA2029092E104C91782,
-				08FB779DFE84155DC02AAC07,
-				1AB674ADFE9D54B511CA2CBB,
-			);
-			isa = PBXGroup;
-			name = ABQuery;
-			refType = 4;
-		};
-		08FB7795FE84155DC02AAC07 = {
-			children = (
-				32A70AAB03705E1F00C91783,
-				08FB7796FE84155DC02AAC07,
-			);
-			isa = PBXGroup;
-			name = Source;
-			refType = 4;
-		};
-		08FB7796FE84155DC02AAC07 = {
-			fileEncoding = 4;
-			isa = PBXFileReference;
-			path = ABQuery.m;
-			refType = 4;
-		};
-		08FB779DFE84155DC02AAC07 = {
-			children = (
-				08FB779EFE84155DC02AAC07,
-				C6B583C60405C207001D6ECE,
-			);
-			isa = PBXGroup;
-			name = "External Frameworks and Libraries";
-			refType = 4;
-		};
-		08FB779EFE84155DC02AAC07 = {
-			isa = PBXFrameworkReference;
-			name = Foundation.framework;
-			path = /System/Library/Frameworks/Foundation.framework;
-			refType = 0;
-		};
-		08FB779FFE84155DC02AAC07 = {
-			buildPhases = (
-				08FB77A0FE84155DC02AAC07,
-				08FB77A1FE84155DC02AAC07,
-				08FB77A3FE84155DC02AAC07,
-				08FB77A5FE84155DC02AAC07,
-				C6859EA4029092FD04C91782,
-			);
-			buildSettings = {
-				FRAMEWORK_SEARCH_PATHS = "";
-				HEADER_SEARCH_PATHS = "";
-				INSTALL_PATH = "$(HOME)/bin";
-				LIBRARY_SEARCH_PATHS = "";
-				OTHER_CFLAGS = "";
-				OTHER_LDFLAGS = "";
-				OTHER_REZFLAGS = "";
-				PRECOMPILE_PREFIX_HEADER = YES;
-				PREFIX_HEADER = ABQuery_Prefix.h;
-				PRODUCT_NAME = ABQuery;
-				REZ_EXECUTABLE = YES;
-				SECTORDER_FLAGS = "";
-				WARNING_CFLAGS = "-Wmost -Wno-four-char-constants -Wno-unknown-pragmas";
-			};
-			dependencies = (
-			);
-			isa = PBXToolTarget;
-			name = ABQuery;
-			productInstallPath = "$(HOME)/bin";
-			productName = ABQuery;
-			productReference = 034768E6FF38A76511DB9C8B;
-		};
-		08FB77A0FE84155DC02AAC07 = {
-			buildActionMask = 2147483647;
-			files = (
-				32A70AAC03705E1F00C91783,
-			);
-			isa = PBXHeadersBuildPhase;
-			runOnlyForDeploymentPostprocessing = 0;
-		};
-		08FB77A1FE84155DC02AAC07 = {
-			buildActionMask = 2147483647;
-			files = (
-				08FB77A2FE84155DC02AAC07,
-			);
-			isa = PBXSourcesBuildPhase;
-			runOnlyForDeploymentPostprocessing = 0;
-		};
-		08FB77A2FE84155DC02AAC07 = {
-			fileRef = 08FB7796FE84155DC02AAC07;
-			isa = PBXBuildFile;
-			settings = {
-				ATTRIBUTES = (
-				);
-			};
-		};
-		08FB77A3FE84155DC02AAC07 = {
-			buildActionMask = 2147483647;
-			files = (
-				08FB77A4FE84155DC02AAC07,
-				C6B583C70405C207001D6ECE,
-			);
-			isa = PBXFrameworksBuildPhase;
-			runOnlyForDeploymentPostprocessing = 0;
-		};
-		08FB77A4FE84155DC02AAC07 = {
-			fileRef = 08FB779EFE84155DC02AAC07;
-			isa = PBXBuildFile;
-			settings = {
-			};
-		};
-		08FB77A5FE84155DC02AAC07 = {
-			buildActionMask = 2147483647;
-			files = (
-			);
-			isa = PBXRezBuildPhase;
-			runOnlyForDeploymentPostprocessing = 0;
-		};
-//080
-//081
-//082
-//083
-//084
-//1A0
-//1A1
-//1A2
-//1A3
-//1A4
-		1AB674ADFE9D54B511CA2CBB = {
-			children = (
-				034768E6FF38A76511DB9C8B,
-			);
-			isa = PBXGroup;
-			name = Products;
-			refType = 4;
-		};
-//1A0
-//1A1
-//1A2
-//1A3
-//1A4
-//320
-//321
-//322
-//323
-//324
-		32A70AAB03705E1F00C91783 = {
-			fileEncoding = 4;
-			isa = PBXFileReference;
-			path = ABQuery_Prefix.h;
-			refType = 4;
-		};
-		32A70AAC03705E1F00C91783 = {
-			fileRef = 32A70AAB03705E1F00C91783;
-			isa = PBXBuildFile;
-			settings = {
-			};
-		};
-//320
-//321
-//322
-//323
-//324
-//C60
-//C61
-//C62
-//C63
-//C64
-		C6859EA2029092E104C91782 = {
-			children = (
-			);
-			isa = PBXGroup;
-			name = Documentation;
-			refType = 4;
-		};
-		C6859EA4029092FD04C91782 = {
-			buildActionMask = 8;
-			dstPath = /usr/share/man/man1/;
-			dstSubfolderSpec = 0;
-			files = (
-				C6B583DD0405DFD5001D6ECE,
-			);
-			isa = PBXCopyFilesBuildPhase;
-			runOnlyForDeploymentPostprocessing = 1;
-		};
-		C6B583C60405C207001D6ECE = {
-			isa = PBXFrameworkReference;
-			name = AddressBook.framework;
-			path = /System/Library/Frameworks/AddressBook.framework;
-			refType = 0;
-		};
-		C6B583C70405C207001D6ECE = {
-			fileRef = C6B583C60405C207001D6ECE;
-			isa = PBXBuildFile;
-			settings = {
-			};
-		};
-		C6B583DD0405DFD5001D6ECE = {
-			fileRef = 034768E6FF38A76511DB9C8B;
-			isa = PBXBuildFile;
-			settings = {
-			};
-		};
-	};
-	rootObject = 08FB7793FE84155DC02AAC07;
-}
