@@ -1,7 +1,0 @@
-//
-// Prefix header for all source files of the 'ABQuery' target in the 'ABQuery' project.
-//
-
-#ifdef __OBJC__
-    #import <Foundation/Foundation.h>
-#endif
