@@ -19,8 +19,9 @@ lbdb (0.39) unstable; urgency=low
     Alexandra N. Kossovsky) (Closes: #512074).
   * Mention user mutt-ldap-query configuration files in lbdbq(1) man page
     (Closes: #534710).
+  * Update ABQuery build mechanism (Thanks to Brendan Cully).
 
- -- Roland Rosenfeld <roland@debian.org>  Sat, 10 May 2014 17:18:48 +0200
+ -- Roland Rosenfeld <roland@debian.org>  Sat, 10 May 2014 17:33:51 +0200
 
 lbdb (0.38) unstable; urgency=low
 
